Use SqlConnectionStringBuilder in user secrets example

--- a/aspnetcore/security/app-secrets/samples/1.x/UserSecrets/UserSecrets.csproj
+++ b/aspnetcore/security/app-secrets/samples/1.x/UserSecrets/UserSecrets.csproj
@@ -11,6 +11,8 @@
                       Version="1.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" 
                       Version="1.1.2" />
+    <PackageReference Include="System.Data.SqlClient" 
+                      Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" 
